# offline-llm-android

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/android/gguf_llama_jin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/android/gguf_llama_jin/: MainActivity.kt
app/src/main/java/com/android/gguf_llama_jin/core/: AppLogger.kt  AppResult.kt  DispatchersProvider.kt
app/src/main/java/com/android/gguf_llama_jin/domain/: ModelCatalogUseCase.kt
app/src/main/java/com/android/gguf_llama_jin/inference/: InferenceSessionManager.kt
app/src/main/java/com/android/gguf_llama_jin/telemetry/: Telemetry.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/android/gguf_llama_jin/: DeviceHeuristicsTest.kt  ExampleUnitTest.kt  FileVerifierTest.kt  InferenceSessionManagerTest.kt  TavilyWebSearchProviderTest.kt  WebSearchGateTest.kt  WebSearchProviderFactoryTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
inference/: build.gradle.kts
inference/src/main/: AndroidManifest.xml
inference/src/main/java/com/android/gguf_llama_jin/core/: AppLogger.kt  Constants.kt  DeviceHeuristics.kt  ModelRuntime.kt
llama_cpp/: build.gradle.kts
llama_cpp/src/main/cpp/: gguf_jni.cpp
onnx_runtime/: build.gradle.kts
skills/compose-viewmodel-udf/: SKILL.md
skills/compose-viewmodel-udf/agents/: openai.yaml
ui/: build.gradle.kts
(+53 files in other folders)
